--- a/app/views/estimate_mailer/received_email.text.erb
+++ b/app/views/estimate_mailer/received_email.text.erb
@@ -1,13 +1,11 @@
-『ムービーズ』にお問い合わせがありました。
+『シロアリ隊』にお問い合わせがありました。
 
 --------------------------
-会社名: <%= @estimate.co%>
 担当者名: <%= @estimate.name%>
 電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
 メールアドレス: <%= @estimate.email%>
-URL: <%= @estimate.url%>
-業種: <%= @estimate.business %>
+平米数: <%= @estimate.wide %>
 希望納期: <%= @estimate.period %>
 制作したい動画内容・要望:<%= @estimate.remarks %>
 --------------------------
