--- a/app/views/estimate_mailer/send_email.text.erb
+++ b/app/views/estimate_mailer/send_email.text.erb
@@ -1,23 +1,21 @@
 <%= @estimate.co%> <%= @estimate.name%>様
 
-この度はムービーズにお問い合わせ頂きありがとうございました。
+この度はシロアリ隊にお問い合わせ頂きありがとうございました。
 
 以下の内容にて承りました。内容確認し、担当者よりご連絡差し上げます。
 
 何卒よろしくお願い致します。
 
 --------------------------
-会社名: <%= @estimate.co%>
 担当者名: <%= @estimate.name%>
 電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
 メールアドレス: <%= @estimate.email%>
-URL: <%= @estimate.url%>
-業種: <%= @estimate.business %>
+平米数: <%= @estimate.wide %>
 希望納期: <%= @estimate.period %>
 制作したい動画内容・要望:<%= @estimate.remarks %>
 --------------------------
 
-株式会社Ri-Plus『ムービーズ』
+シロアリ駆除一括見積サイト『シロアリ隊』
 東京都中央区銀座6-13-16 ヒューリック銀座ウォールビル7F
-https://m.factoru.jp/
+https://s.factoru.jp/
