--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,5 +1,5 @@
-- set_meta_tags  title: '動画制作なら『売れる』マーケティング動画に特化した『ムービーズ』'
-- set_meta_tags  description: '『売れる』マーケティング動画に特化した動画制作会社なら『ムービーズ』におまかせください。顧客の深層心理を活用して販売に直結する動画サポートをお手伝いします。'
+- set_meta_tags  title: 'シロアリ駆除を一括比較見積で低価格依頼するなら『シロアリ隊』'
+- set_meta_tags  description: 'シロアリ駆除にお困りの方に向けて活用頂ける一括比較見積サイト『シロアリ隊』。複数業者の見積から最適な企業を選定いただけます。'
 /#トップ
 br
 br
@@ -7,17 +7,17 @@ br
 .back-image-index.back-image-top
   .row
     .col-sm-6
-       = image_tag "pixta.jpeg", class: "pc-image"
-       = image_tag "pixta.jpeg", class: "mobile-image"
+       = image_tag "pixta.webp", class: "pc-image"
+       = image_tag "pixta.webp", class: "mobile-image"
     .col-sm-6
         h1
          .index-3
-          |『売れる』に特化した動画制作
+          | シロアリ駆除業社の
           br
-          |マーケティング動画委託なら
+          | 最安値を手軽に探すなら
           br
          .red-title
-          | 『ムービーズ』
+          | 『シロアリ隊』
         p.push
          span
            | \ カンタン60秒入力! /
@@ -25,30 +25,25 @@ br
          =image_tag 'click3.webp', width: '100%', class: 'center'
         
 
-
-
-br
-br
 .row
    .col-sm-12.center
      h2.push
       span
-       | ▼こんな動画が制作できます！▼
-br
-br/
-.center
- = video_tag("/videos/movie.mp4", :controls => true,  :width=> "70%")
+       | シロアリを見つけたらすぐに相談
+       br
+       br
+       | スピード感を持って対応します！
 br/
 br/
 
 .row#anchor
    .col-sm-12.center
      h2.surprise
-        | 『ムービーズ』とは？
+        | 『シロアリ隊』とは？
 
 .top-wrapper
  br
- p.center  『ムービーズ』は、『売れる』に特化したマーケティング動画制作・動画広告運用代行サービスです。動画と言うのはただ作るだけでは実は全く意味をなさず、ゴールやターゲットを設定することにより大きな効果を出すことができます。『ムービーズ』では、商品やサービスを販売したい企業様に専門性を持ち、過去1000社以上のコンサルティング実績より繰り出す独自のマーケティング戦略で、企業様の売上アップを動画制作からサポートします。
+ p.center  シロアリ隊は、シロアリ駆除業社を簡単に一括比較見積できるサービスです。昨今のインターネットには様々な情報が溢れており、どの業社を選べば良いのか調べるだけでも一苦労された経験をお持ちの方は多いと思います。シロアリ隊ではシロアリ駆除業社と多数取引しており、一括見積により簡単に業社の比較を行うことができます。
  br/
  br/
  .center
@@ -57,10 +52,10 @@ br/
 .row#anchor
    .col-sm-12.center
      h2.surprise
-        | こんな方におすすめです！
+        | こんな時にご相談ください！
 br/
 .top-wrapper
- p.center 『ムービーズ』では、以下のようなお悩みがある企業様にご活用いただいております。
+ p.center 『シロアリを見つけた』『床が沈んでいる』。以下のような発見があれば、既にシロアリ被害が進行している可能性があります。思い当たる節があれば、早急にご相談ください。
  br/
  br/
  .row.center
@@ -76,10 +71,10 @@ br
    .col-sm-12.center
      h2.push
       span
-       | お任せ下さい！売れる動画制作は
+       | シロアリ駆除はシロアリ隊へ
        br
        br
-       | 『ムービーズ』へご依頼を！
+       | お任せください！
 br/
 hr.line
 br
@@ -96,86 +91,36 @@ br
 br
 
 
-.row#anchor
-   .col-sm-12.center
-     h2.surprise
-        | 『ムービーズ』の得意領域
-
-.top-wrapper
- p.center 『ムービーズ』では、全ての動画を受託している訳ではございません。売れるマーケティング動画制作に特化するムービーズでは、大変恐縮ながら成果を上げることを第一に考えているため、以下のように線引きさせて頂いております。
- br/
- br/
- .row
-  .col-xs-6 
-    .box13
-     | ⭕️ 特定商品の販売促進における動画
-    br/
-    .box13
-     | ⭕️ 企業のサービスの集客を行う動画
-    br/
-    .box13
-     | ⭕️ コンバージョンを意識した動画
-    br/
-    .box13
-     | ⭕️ ユーザーの認知・関心を集めるための動画 
-  .col-xs-6 
-    .box13
-     | ❌ 会社自体のPRを行う動画
-    br/
-    .box13
-     | ❌ ドラマのような規模感を持つ動画
-    br/
-    .box13
-     | ❌ ゴールやターゲットのない動画制作
-    br/
-    .box13
-     | ❌ 過剰な成果やノルマを求める方 
-br
-br
-hr.line
-br
-br
-br
-.row
-  .col-sm-12.push
-   span
-     | \ カンタン60秒入力! /
-   = link_to "/estimates/new" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
-  .center   
-br
-br
-
 .row
    .col-sm-12.center
      h2.surprise
-        | 動画ジャンルはブルーオーシャン
+        | シロアリ駆除はスピードが命
 
 .top-wrapper
- p.center 動画制作と聞くと、構成案を考えたり色々面倒なことが多そうと思っておりませんか？正直にお伝えすると、それは事実です。テキストの広告であればスムーズに出稿できるのに対して、動画は動画自体を制作するフェーズから入るのでどの企業も敬遠しがち。しかしだからこそ、取り組む企業絶対数が少なく、ビジネスチャンスを成功に導きやすくなります。
+ p.center シロアリ駆除はスピードが命と言っても過言ではありません。何故なら一匹見つけるとシロアリは集団で動いていることが多く、既に自宅のどこかに巣を作っているかもしれません。放置しておくと、被害が大きくなり最悪倒壊の可能性も出てくる大変危険なものです。
  br
 
  br
  br/
  .row.center
    .col-sm-12
-     =image_tag 'blue.webp', width: '60%', class: 'center'
+     =image_tag 'blue.webp', width: '95%', class: 'center'
 
 
 
 .row#anchor
    .col-sm-12.center
      h2.surprise
-        | 動画は事前ターゲット選定次第
+        | 全国の優良なシロアリ業社を紹介
 .top-wrapper
- p.center 動画制作は、事前のターゲット選定によりほとんどの結果が出ると言っても過言ではないでしょう。商品やサービスには特性があり、いきなり成約を狙える商材からまずは認知から行う商材まで様々です。しっかりとサービスや商品毎にゴール・ターゲットを定めることで非常に高い成果を得ることができます。
+ p.center シロアリ駆除業社の一括比較見積サービス『シロアリ隊』では、全国のシロアリ業社をご紹介します。シロアリ業社と言っても法外な料金を請求するような悪徳業者はもちろん除外し、優良で信頼できる企業のみを厳選してご紹介しております。
  br
 
  br
  br/
  .row.center
    .col-sm-12
-     =image_tag 'target.webp', width: '60%', class: 'center'
+     =image_tag 'award.webp', width: '60%', class: 'center'
 
 
 br
@@ -201,41 +146,35 @@ br
 .row
    .col-sm-12.center
      h2.surprise
-        | マーケティング動画が得意な理由
+        | ご利用料金
 
 .top-wrapper
- p.center 『ムービーズ』は、元々母体となっている企業がマーケティング・コンサルティングを軸にした企業です。過去1000社以上のコンサルティングサポート実績があるため、商材のターゲット選定・市場調査・構成等を非常に得意としております。
+ p.center シロアリ駆除業社の一括比較見積サービス『シロアリ隊』をご利用いただくにあたっての費用をご案内させていただきます。
  br
 
  .row.center
-   .col-sm-4
-     h3.head マーケティング会社が運営
-     =image_tag 'marketing.webp', width: '95%', class: 'center'
-     p.center マーケティング会社がスタートした動画制作事業のため、マーケティングで利益の最大化を行います
-     br
-   .col-sm-4
-     h3.head 10年以上の経営実績
-     =image_tag 'achivement.webp', width: '95%'
-     p.center マーケティングとしての事業キャリアは10年を超えており、様々なジャンルの企業実績があります。
-     br
-   .col-sm-4
-     h3.head 過去1000社以上のコンサル実績
-     =image_tag 'consulting.webp', width: '95%', class: 'center'
-     p.center 2009年以降、1000社を超えるマーケティングサポート実績があります。
-     br
+   .col-sm-5
+     br/
+     =image_tag 'introduction.webp', width: '70%', class: 'center select-image',alt:"自動販売機ねっとをご利用いただく方にはご利用から設置まで全て無料でご利用いただけます。"
+   .col-sm-7
+    br/
+    br/
+    table.free.responsive-table
+     col.col-1
+     col.col-2
+     tr
+      th.company-cell サイト利用費
+      td.responsive-cell 0円
+     tr
+      th.company-cell 見積における一切の費用
+      td.responsive-cell 0円
+     tr
+      th.company-cell 契約後の成果報酬等
+      td.responsive-cell 0円
+     tr
+      th.company-cell 現地調査費用
+      td.responsive-cell 0円
 
-.row
-   .col-sm-12.center
-     h2.surprise
-        | 50名を超える動画プロ集団
-
-.top-wrapper
- p.center 『ムービーズ』は、マーケティング思考担当者と、50名の動画制作のプロにより成り立つ組織です。打ち合わせやディレクションは全てマーケティング担当者が実施し、動画制作担当に落とし込むことで、動画クオリティのみを重視するのではなく、『売れる』マーケティング動画を落とし込むことを重視しております。
- br
- br/
- .row.center
-   .col-sm-12
-     =image_tag 'pro.webp', width: '60%', class: 'center'
 
 
 br/
@@ -263,7 +202,7 @@ br
       | ご利用頂いたお客様のレビュー
 br/
 .top-wrapper
- p.center 売れるマーケティング動画制作『ムービーズ』をご利用いただいた方のカスタマーレビューをご案内させて頂いております。
+ p.center シロアリ駆除一括比較見積『シロアリ隊』をご利用いただいた方のカスタマーレビューをご案内させて頂いております。
  br
 
 .row
@@ -275,12 +214,12 @@ br/
        tr
          th.title[colspan="2"]
           .center
-           | エステ脱毛
+           | 栃木県
        tr
          th
            = image_tag "user.webp", width:"100%";
          td
-           | 当社の商品を売るための動画を数々試してきましたが、このサービスは一味違いました。コンサルティングから製作まで手厚いサポートで、動画の質だけでなく、その効果を実感できました。
+           | 最近、自宅の基礎にシロアリが発生して焦っていました。どの業者に頼むべきか分からない中、このサイトを見つけて利用。驚いたのは、短時間で複数の業者から見積もりが届いたこと。特に現地調査が無料というのは助かりました。信頼できる業者と契約することができ、非常に安心しました。
  .col-sm-6
    table.review.left
      col[width="30%"]
@@ -289,12 +228,12 @@ br/
        tr
          th.title[colspan="2"]
           .center
-           | 投資関係
+           | 北海道
        tr
          th
            = image_tag "user.webp", width:"100%";
          td
-           | 私たちのニーズをしっかりと捉え、それをディレクションしながら形にしてくれるサービス。動画制作だけでなく、どのように広告配信すればいいのかまでアドバイスしてくれるのは大変ありがたい。
+           | 家を建てて40年、初めてシロアリの被害に遭遇。どう対処すればいいか分からない中、このサイトの存在を知りました。操作も簡単で、すぐに見積もりを取ることができました。現地調査の対応も早く、感謝しています。
 br/
 .row
  .col-sm-6
@@ -305,12 +244,12 @@ br/
        tr
          th.title[colspan="2"]
           .center
-           | 健康製品
+           | 神奈川県
        tr
          th
            = image_tag "user.webp", width:"100%";
          td
-           | 認知拡大を目指して動画を制作したかったのですが、どんな内容にすればいいのか迷っていました。このサービスのコンサルティングを受けたおかげで、効果的な動画が完成。結果、多くの人に当社のサービスを知ってもらえました。
+           | 老後の我が家でシロアリ被害に遭ってしまい、どうしたらいいか迷っていました。このサービスを利用してみたところ、信頼できる業者を簡単に見つけることができました。調査から施工までスムーズに進めることができ、感謝しています。
  .col-sm-6
    table.review.left
      col[width="30%"]
@@ -319,12 +258,12 @@ br/
        tr
          th.title[colspan="2"]
           .center
-           | 化粧品会社
+           | 三重県
        tr
          th
            = image_tag "user.webp", width:"100%";
          td
-           | 商品の良さを伝えるだけではなく、視聴者にアクションを起こさせる動画を作成してもらいました。実際に効果を見ることができ、大変満足しています。
+           | 子供が「床がギシギシ音する」と言ってきた時、シロアリの可能性を疑いました。急いで対策を立てたいと思っていた矢先、このサービスを発見。迅速に対応してくれる業者を紹介してもらい、我が家を救ってくれました。
 br/
 .row
  .col-sm-6
@@ -335,12 +274,12 @@ br/
        tr
          th.title[colspan="2"]
           .center
-           | 非公開
+           | 石川県
        tr
          th
            = image_tag "user.webp", width:"100%";
          td
-           | 動画制作のプロセスが非常にスムーズでした。我々のアイディアや希望をしっかりと取り入れながら、さらにプロの視点でブラッシュアップしてくれる。そのおかげで、非常に魅力的な動画が完成しました。
+           | 以前、シロアリ駆除を試みたものの、再発してしまいました。今回はこのサイトで比較して業社を選定し、しっかりと対処してもらいました。今のところシロアリの気配はなく、安堵しています。
  .col-sm-6
 
 br
@@ -375,43 +314,45 @@ ul.flow.center
   li
     dl
       dt
-        span.icon
+        h4.span.icon
           | STEP.01
-        | 下記よりお問い合わせ
+        | カンタン60秒見積もり入力
       dd.center
-        | \ カンタン60秒入力! /よりお問い合わせフォームへ飛ぶことができますので
+        | まずは下記の一括見積もりをクリックいただき、ご希望内容や希望の条件をカンタン入力！
         br/
-        | 必要情報を入力して送信をお願いします。
+        | もちろんお問い合わせには一切費用をいただきません。
   li
     dl
       dt
-        span.icon
+        h4.span.icon
           | STEP.02
-        | 担当者と打ち合わせ
+        | シロアリ業社見積開始
       dd.center
-        | マーケティング担当者がディレクションさせていただきますので、
-        br
-        | ご希望の動画制作内容をお伝え下さい。
-        
-    dl
-      dt
-        span.icon
-          | STEP.03
-        | お見積り条件提示
-      dd.center
-        | 料金内容や動画内容についてのお見積りを差し上げます。
+        | 各シロアリ駆除業社に情報共有を行い、見積を開始させていただきます。
         br/
-        | 予算に応じて変更も可能ですのでお申し付けください。
+        | 内容によってはシロアリ駆除業社より直接コンタクトを取らせて頂く場合がございます。
   li
     dl
       dt
-        span.icon
-          | STEP.04
-        | 動画の納品
+        h4.span.icon
+          | STEP.03
+        | 各社見積りからシロアリ駆除業者を決定
       dd.center
-        | 制作期間は依頼内容によって最短1週間〜可能となります。
+        | 『シロアリ隊』が各シロアリ駆除業社の見積をご案内致します。
         br/
-        | 動画の修正が必要な場合は何なりとお申し付けくださいませ。
+        | 最適な企業がありましたら発注を決定頂きます。
+  li
+    dl
+      dt
+        h4.span.icon
+          | STEP.04
+        | 駆除開始
+      dd.center
+        | シロアリ駆除業社が決定しましたら、早急に駆除に移行します。
+        br
+        | ご都合に合わせて業社と日程調整をお願いします。
+
+
 
 
 br
